@@ -2,6 +2,17 @@
 Python News
 +++++++++++
 
+What's New in Python 2.7.9?
+===========================
+
+*Release date: 2014-12-XX*
+
+Library
+-------
+
+- Issue #22960: Add a context argument to xmlrpclib.ServerProxy.
+
+
 What's New in Python 2.7.9 release candidate 1?
 ===============================================
 
